--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
       <h2>Intereses</h2>
       <table id="tabla intereses">
           <tr>
-            <td>Blockchain</td>
-            <td>El Blockchain consiste en una base de datos distribuida, formada por cadenas de bloques que han sido diseñadas para evitar su modificación una vez que un dato ha sido publicado.</td>
+            <td class="needs padding">Blockchain</td>
+            <td class="needs padding">El Blockchain consiste en una base de datos distribuida, formada por cadenas de bloques que han sido diseñadas para evitar su modificación una vez que un dato ha sido publicado.</td>
           </tr>
           <tr>
-            <td>Realidad aumentada</td>
-            <td>La realidad aumentada es una tecnología que permite combinar elementos del mundo real con elementos virtuales, que sirven para aportar información adicional a los primeros, enriqueciendo la experiencia visual y mejorando el canal de comunicación.</td>
+            <td class="needs padding">Realidad aumentada</td>
+            <td class="needs padding">La realidad aumentada es una tecnología que permite combinar elementos del mundo real con elementos virtuales, que sirven para aportar información adicional a los primeros, enriqueciendo la experiencia visual y mejorando el canal de comunicación.</td>
           </tr>
           <tr>
-              <td>Machine Learning</td>
-              <td>El Machine Learning es una disciplina del campo de la Inteligencia Artificial que, a través de algoritmos, dota a los computadores de la capacidad de identificar patrones en datos masivos y elaborar predicciones.</td>
+              <td class="needs padding">Machine Learning</td>
+              <td class="needs padding">El Machine Learning es una disciplina del campo de la Inteligencia Artificial que, a través de algoritmos, dota a los computadores de la capacidad de identificar patrones en datos masivos y elaborar predicciones.</td>
             </tr>
         </table> </section>
         <br/>
